[gd_scene load_steps=5 format=3 uid="uid://dpcrbqnh342go"]

[ext_resource type="Script" path="res://Elements/Teclado.gd" id="1_k5kpb"]
[ext_resource type="Texture2D" uid="uid://b6s1fd8iljinc" path="res://Assets/teclado.png" id="1_opuo6"]
[ext_resource type="Texture2D" uid="uid://d0drvpjxxhmej" path="res://Assets/R_hand.png" id="2_ekoev"]
[ext_resource type="Texture2D" uid="uid://c8l058tbjdnoa" path="res://Assets/L_hand.png" id="3_jygrr"]

[node name="PanelDelTeclado" type="Node"]
script = ExtResource("1_k5kpb")

[node name="Fondo" type="ColorRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -324.0
grow_horizontal = 2
grow_vertical = 0

[node name="Dedos" type="Node" parent="."]

[node name="dedo_indice_izq" type="ColorRect" parent="Dedos"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -460.0
offset_top = -269.0
offset_right = -435.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 0

[node name="dedo_meñique_izq" type="ColorRect" parent="Dedos"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -563.0
offset_top = -213.0
offset_right = -536.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 0
rotation = -0.39968

[node name="dedo_anular_izq" type="ColorRect" parent="Dedos"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -522.0
offset_top = -256.0
offset_right = -495.0
offset_bottom = -215.0
grow_horizontal = 2
grow_vertical = 0

[node name="dedo_medio_izq" type="ColorRect" parent="Dedos"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -493.0
offset_top = -267.0
offset_right = -466.0
offset_bottom = -226.0
grow_horizontal = 2
grow_vertical = 0

[node name="dedo_indice_der" type="ColorRect" parent="Dedos"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 432.0
offset_top = -262.0
offset_right = 459.0
offset_bottom = -221.0
grow_horizontal = 2
grow_vertical = 0

[node name="dedo_meñique_der" type="ColorRect" parent="Dedos"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 535.0
offset_top = -230.0
offset_right = 562.0
offset_bottom = -189.0
grow_horizontal = 2
grow_vertical = 0
rotation = 0.298451

[node name="dedo_anular_der" type="ColorRect" parent="Dedos"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 497.0
offset_top = -257.0
offset_right = 524.0
offset_bottom = -216.0
grow_horizontal = 2
grow_vertical = 0

[node name="dedo_medio_der" type="ColorRect" parent="Dedos"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 465.0
offset_top = -267.0
offset_right = 492.0
offset_bottom = -226.0
grow_horizontal = 2
grow_vertical = 0

[node name="Teclas" type="Node" parent="."]

[node name="Tecla_a" type="ColorRect" parent="Teclas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -286.0
offset_top = -161.0
offset_right = -241.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0

[node name="Tecla_s" type="ColorRect" parent="Teclas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -236.0
offset_top = -161.0
offset_right = -191.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0

[node name="Tecla_d" type="ColorRect" parent="Teclas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -182.0
offset_top = -161.0
offset_right = -137.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0

[node name="Tecla_f" type="ColorRect" parent="Teclas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -129.0
offset_top = -161.0
offset_right = -84.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0

[node name="Tecla_g" type="ColorRect" parent="Teclas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -161.0
offset_right = -32.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0

[node name="Tecla_h" type="ColorRect" parent="Teclas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -161.0
offset_right = 22.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0

[node name="Tecla_j" type="ColorRect" parent="Teclas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -161.0
offset_right = 75.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0

[node name="Tecla_k" type="ColorRect" parent="Teclas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 84.0
offset_top = -161.0
offset_right = 129.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0

[node name="Tecla_l" type="ColorRect" parent="Teclas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 138.0
offset_top = -162.0
offset_right = 183.0
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 0

[node name="Tecla_ñ" type="ColorRect" parent="Teclas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 188.0
offset_top = -162.0
offset_right = 233.0
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 0

[node name="Rigth_Hand" type="TextureRect" parent="."]
texture_filter = 1
layout_direction = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 387.0
offset_top = -275.0
offset_right = 563.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_ekoev")
expand_mode = 1

[node name="Left_Hand" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -564.0
offset_top = -276.0
offset_right = -388.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_jygrr")
expand_mode = 1

[node name="Keyboard" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -388.0
offset_top = -275.0
offset_right = 387.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_opuo6")
expand_mode = 1

[node name="Timer" type="Timer" parent="."]
